--- a/random sample.ipynb
+++ b/random sample.ipynb
@@ -31,19 +31,7 @@
    "execution_count": 5,
    "id": "e0540a15-38c4-4a11-a73e-c8b1062c9ebe",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 't1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[1;32m      2\u001b[0m t \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39msample(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m20\u001b[39m), \u001b[38;5;241m3\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mt1\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 't1' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "t = random.sample(range(20), 3)"
@@ -51,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "d1ad8297-ebe8-46fd-acdd-ac03c56c6bbf",
    "metadata": {},
    "outputs": [
@@ -62,110 +50,20 @@
       "1[1, 5, 7]\n",
       "2[1, 3, 5]\n",
       "3[1, 5, 7]\n",
-      "4[3, 5, 7]\n",
-      "5[1, 3, 5]\n",
-      "6[3, 5, 7]\n",
+      "4[1, 3, 5]\n",
+      "5[1, 5, 7]\n",
+      "6[1, 3, 5]\n",
       "7[1, 5, 7]\n",
-      "8[1, 3, 7]\n",
-      "9[1, 3, 5]\n",
-      "10[1, 3, 7]\n",
-      "11[3, 5, 7]\n",
-      "12[1, 3, 7]\n",
-      "13[1, 5, 7]\n",
-      "14[3, 5, 7]\n",
-      "15[1, 5, 7]\n",
-      "16[1, 3, 7]\n",
-      "17[1, 5, 7]\n",
-      "18[1, 3, 7]\n",
-      "19[3, 5, 7]\n",
-      "20[1, 5, 7]\n",
-      "21[3, 5, 7]\n",
-      "22[1, 5, 7]\n",
-      "23[1, 3, 7]\n",
-      "24[1, 5, 7]\n",
-      "25[1, 3, 5]\n",
-      "26[1, 3, 7]\n",
-      "27[1, 5, 7]\n",
-      "28[1, 3, 7]\n",
-      "29[1, 3, 5]\n",
-      "30[1, 5, 7]\n",
-      "31[1, 3, 5]\n",
-      "32[1, 5, 7]\n",
-      "33[3, 5, 7]\n",
-      "34[1, 3, 7]\n",
-      "35[3, 5, 7]\n",
-      "36[1, 3, 5]\n",
-      "37[1, 5, 7]\n",
-      "38[3, 5, 7]\n",
-      "39[1, 5, 7]\n",
-      "40[3, 5, 7]\n",
-      "41[1, 5, 7]\n",
-      "42[1, 3, 7]\n",
-      "43[1, 5, 7]\n",
-      "44[1, 3, 5]\n",
-      "45[1, 3, 7]\n",
-      "46[1, 3, 5]\n",
-      "47[3, 5, 7]\n",
-      "48[1, 3, 7]\n",
-      "49[1, 3, 5]\n",
-      "50[1, 3, 7]\n",
-      "51[1, 5, 7]\n",
-      "52[1, 3, 5]\n",
-      "53[3, 5, 7]\n",
-      "54[1, 3, 7]\n",
-      "55[1, 5, 7]\n",
-      "56[1, 3, 5]\n",
-      "57[1, 3, 7]\n",
-      "58[1, 5, 7]\n",
-      "59[3, 5, 7]\n",
-      "60[1, 5, 7]\n",
-      "61[1, 3, 5]\n",
-      "62[1, 5, 7]\n",
-      "63[1, 3, 7]\n",
-      "64[1, 3, 5]\n",
-      "65[3, 5, 7]\n",
-      "66[1, 5, 7]\n",
-      "67[1, 3, 7]\n",
-      "68[3, 5, 7]\n",
-      "69[1, 5, 7]\n",
-      "70[1, 3, 7]\n",
-      "71[1, 3, 5]\n",
-      "72[1, 3, 7]\n",
-      "73[3, 5, 7]\n",
-      "74[1, 5, 7]\n",
-      "75[1, 3, 5]\n",
-      "76[1, 3, 7]\n",
-      "77[1, 5, 7]\n",
-      "78[1, 3, 5]\n",
-      "79[3, 5, 7]\n",
-      "80[1, 5, 7]\n",
-      "81[3, 5, 7]\n",
-      "82[1, 3, 7]\n",
-      "83[1, 3, 5]\n",
-      "84[3, 5, 7]\n",
-      "85[1, 3, 5]\n",
-      "86[1, 5, 7]\n",
-      "87[1, 3, 5]\n",
-      "88[1, 3, 7]\n",
-      "89[3, 5, 7]\n",
-      "90[1, 3, 5]\n",
-      "91[1, 3, 7]\n",
-      "92[1, 5, 7]\n",
-      "93[3, 5, 7]\n",
-      "94[1, 3, 7]\n",
-      "95[3, 5, 7]\n",
-      "96[1, 3, 7]\n",
-      "97[3, 5, 7]\n",
-      "98[1, 5, 7]\n",
-      "99[3, 5, 7]\n",
-      "100[1, 3, 5]\n"
+      "8[3, 5, 7]\n",
+      "9[1, 5, 7]\n",
+      "10[1, 3, 7]\n"
      ]
     }
    ],
    "source": [
     "stage = 1\n",
     "t1=0\n",
-    "while stage <= 100:\n",
+    "while stage <= 10:\n",
     "    t = random.sample(range(1, 8, 2), 3)\n",
     "    t.sort()\n",
     "    if(t == t1): continue  \n",
@@ -176,8 +74,243 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "id": "94333c67-0f0e-435c-ad9d-96c9af4991c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=5\n",
+    "y=3\n",
+    "c=[int(a) for a in range(1, x*y+1)]\n",
+    "d=random.choice(c)\n",
+    "c.remove(d)\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "db4a792a-9c49-49ca-83b2-709c282b3dcd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=5\n",
+    "y=3\n",
+    "c=[int(a) for a in range(1, x*y+1)]\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "ac361eb7-b182-4a0b-b513-55237e808b9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "05  11  15  12  02  \n",
+      "04  06  10  03  09  \n",
+      "07  14  01  08  13  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "x = 5\n",
+    "y = 3\n",
+    "c = [int(a) for a in range(1, x*y+1)]\n",
+    "for i in range(y):\n",
+    "    for j in range(x):\n",
+    "        d = random.choice(c)\n",
+    "        if len(str(d)) == 1:\n",
+    "            print(\"0\" +  str(d), end=\"  \")\n",
+    "        else:\n",
+    "            print(str(d), end=\"  \")\n",
+    "        c.remove(d)\n",
+    "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "a9a54dcc-7f3b-4ad2-a0ac-9878b5336b4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__ __ __ __ 02 \n",
+      "__ 05 __ 04 __ \n",
+      "03 __ 01 __ __ \n"
+     ]
+    }
+   ],
+   "source": [
+    "x1=5\n",
+    "y1=3\n",
+    "c1=[1,2,3,4,5,6,7,8]\n",
+    "for i in range(y1):\n",
+    "    for j in range(x1):\n",
+    "        if (i%2==0 and j%2==1) or (i%2==1 and j%2==0):\n",
+    "            print(\"__\", end=\" \")\n",
+    "        else:\n",
+    "            d1 =random.choice(c1)\n",
+    "            if d1 > 5:\n",
+    "                print(\"__\", end=\" \")\n",
+    "            else:\n",
+    "                print(\"0\"+str(d1), end=\" \")\n",
+    "            c1.remove(d1)\n",
+    "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b95e1595-aa04-4fdd-804a-cd6b414758d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def position():\n",
+    "    x1=5\n",
+    "    y1=3\n",
+    "    c1=[1,2,3,4,5,6,7,8]\n",
+    "    for i in range(y1):\n",
+    "        for j in range(x1):\n",
+    "            if (i%2==0 and j%2==1) or (i%2==1 and j%2==0):\n",
+    "                print(\"__\", end=\" \")\n",
+    "            else:\n",
+    "                d1 =random.choice(c1)\n",
+    "                if d1 > 5:\n",
+    "                    print(\"__\", end=\" \")\n",
+    "                else:\n",
+    "                    print(\"0\"+str(d1), end=\" \")\n",
+    "                c1.remove(d1)\n",
+    "        print(\"\")\n",
+    "    print(\"\")\n",
+    "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "c0cf0543-b7ef-4fe8-8a6a-4497f60dee55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03 __ 04 __ 05 \n",
+      "__ __ __ 02 __ \n",
+      "__ __ 01 __ __ \n"
+     ]
+    }
+   ],
+   "source": [
+    "position()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ec2574aa-d116-4432-b78a-e9927d105e79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "02 __ 05 __ __ \n",
+      "__ __ __ 03 __ \n",
+      "__ __ 04 __ 01 \n",
+      "\n",
+      "\n",
+      "03 __ 01 __ 02 \n",
+      "__ 05 __ __ __ \n",
+      "04 __ __ __ __ \n",
+      "\n",
+      "\n",
+      "01 __ __ __ 03 \n",
+      "__ 05 __ 04 __ \n",
+      "__ __ __ __ 02 \n",
+      "\n",
+      "\n",
+      "01 __ 04 __ 02 \n",
+      "__ 05 __ 03 __ \n",
+      "__ __ __ __ __ \n",
+      "\n",
+      "\n",
+      "04 __ __ __ __ \n",
+      "__ 02 __ 05 __ \n",
+      "03 __ 01 __ __ \n",
+      "\n",
+      "\n",
+      "__ __ __ __ 02 \n",
+      "__ 04 __ __ __ \n",
+      "03 __ 01 __ 05 \n",
+      "\n",
+      "\n",
+      "04 __ 03 __ __ \n",
+      "__ 05 __ 01 __ \n",
+      "02 __ __ __ __ \n",
+      "\n",
+      "\n",
+      "__ __ 05 __ __ \n",
+      "__ __ __ 03 __ \n",
+      "04 __ 01 __ 02 \n",
+      "\n",
+      "\n",
+      "__ __ __ __ 01 \n",
+      "__ 04 __ 02 __ \n",
+      "__ __ 03 __ 05 \n",
+      "\n",
+      "\n",
+      "__ __ __ __ 04 \n",
+      "__ 03 __ 01 __ \n",
+      "__ __ 02 __ 05 \n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=0\n",
+    "while i < 10:\n",
+    "    position()\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1e938450-d004-44b9-b1b8-8f15aed12937",
+   "id": "2e64ec73-e13c-4598-9eae-e4a4bcbd4478",
    "metadata": {},
    "outputs": [],
    "source": []
