--- a/Random position.ipynb
+++ b/Random position.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "41c13d41-dd93-4990-85a6-e567de284d6e",
    "metadata": {},
    "outputs": [
@@ -10,54 +10,704 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "__ __ 05 __ __ \n",
-      "__ 01 __ 02 __ \n",
-      "04 __ 03 __ __ \n",
+      "05 __ 01 __ 02 \n",
+      "__ __ __ __ __ \n",
+      "03 __ __ __ 04 \n",
       "\n",
       "\n",
-      "__ __ __ __ 04 \n",
-      "__ 03 __ 05 __ \n",
-      "__ __ 01 __ 02 \n",
-      "\n",
-      "\n",
-      "__ __ 05 __ 01 \n",
-      "__ 02 __ 04 __ \n",
-      "__ __ __ __ 03 \n",
       "\n",
       "\n",
       "03 __ 04 __ __ \n",
-      "__ 01 __ 02 __ \n",
-      "05 __ __ __ __ \n",
-      "\n",
-      "\n",
-      "02 __ __ __ __ \n",
-      "__ 01 __ 03 __ \n",
-      "05 __ 04 __ __ \n",
-      "\n",
-      "\n",
-      "01 __ __ __ 02 \n",
-      "__ __ __ 05 __ \n",
-      "__ __ 04 __ 03 \n",
-      "\n",
-      "\n",
-      "__ __ __ __ 01 \n",
-      "__ 04 __ __ __ \n",
-      "02 __ 03 __ 05 \n",
-      "\n",
-      "\n",
-      "03 __ 02 __ 05 \n",
-      "__ __ __ 01 __ \n",
-      "04 __ __ __ __ \n",
-      "\n",
-      "\n",
-      "03 __ __ __ __ \n",
       "__ 02 __ 05 __ \n",
-      "01 __ __ __ 04 \n",
+      "__ __ __ __ 01 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "05 __ __ __ __ \n",
+      "__ 01 __ 02 __ \n",
+      "__ __ 03 __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 02 __ 04 \n",
+      "__ 05 __ 03 __ \n",
+      "__ __ 01 __ __ \n",
+      "\n",
+      "\n",
       "\n",
       "\n",
       "__ __ 01 __ __ \n",
-      "__ __ __ 04 __ \n",
+      "__ 05 __ __ __ \n",
+      "03 __ 04 __ 02 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "01 __ __ __ __ \n",
+      "__ 02 __ __ __ \n",
+      "04 __ 03 __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 02 __ 01 \n",
+      "__ 04 __ __ __ \n",
+      "03 __ __ __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ __ __ 04 \n",
+      "__ 01 __ 03 __ \n",
+      "__ __ 02 __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "05 __ 01 __ 04 \n",
+      "__ __ __ __ __ \n",
+      "__ __ 03 __ 02 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ __ __ __ \n",
+      "__ 04 __ 03 __ \n",
+      "05 __ 02 __ 01 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 05 __ 01 \n",
+      "__ 04 __ 03 __ \n",
+      "__ __ 02 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "04 __ __ __ 05 \n",
+      "__ 03 __ __ __ \n",
+      "01 __ 02 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 01 __ __ \n",
+      "__ 03 __ 04 __ \n",
+      "05 __ __ __ 02 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 05 __ __ \n",
+      "__ 02 __ 03 __ \n",
+      "__ __ 01 __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "05 __ 04 __ 02 \n",
+      "__ __ __ 01 __ \n",
+      "__ __ 03 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "04 __ __ __ 01 \n",
+      "__ 02 __ 03 __ \n",
+      "__ __ 05 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 02 __ __ \n",
+      "__ 04 __ 05 __ \n",
+      "__ __ 03 __ 01 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
       "02 __ 05 __ 03 \n",
+      "__ 01 __ 04 __ \n",
+      "__ __ __ __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ __ __ 02 \n",
+      "__ 03 __ 04 __ \n",
+      "05 __ 01 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ __ __ __ \n",
+      "__ 02 __ 03 __ \n",
+      "05 __ 04 __ 01 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ 04 __ 01 \n",
+      "__ __ __ 05 __ \n",
+      "__ __ 02 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "05 __ 03 __ 01 \n",
+      "__ __ __ __ __ \n",
+      "02 __ __ __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ __ __ 02 \n",
+      "__ 04 __ __ __ \n",
+      "01 __ 05 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "04 __ __ __ 02 \n",
+      "__ 01 __ __ __ \n",
+      "05 __ __ __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ 04 __ 01 \n",
+      "__ __ __ 03 __ \n",
+      "__ __ __ __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ __ __ 05 \n",
+      "__ 03 __ 01 __ \n",
+      "04 __ 02 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ 01 __ 05 \n",
+      "__ __ __ 03 __ \n",
+      "04 __ __ __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 03 __ __ \n",
+      "__ 01 __ 04 __ \n",
+      "05 __ __ __ 02 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 03 __ 05 \n",
+      "__ __ __ 02 __ \n",
+      "__ __ 01 __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "01 __ __ __ __ \n",
+      "__ 05 __ 04 __ \n",
+      "03 __ 02 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ __ __ __ \n",
+      "__ 05 __ 03 __ \n",
+      "01 __ 04 __ 02 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ 01 __ __ \n",
+      "__ 04 __ __ __ \n",
+      "05 __ 02 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ 04 __ __ \n",
+      "__ 01 __ __ __ \n",
+      "05 __ 02 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ __ __ 04 \n",
+      "__ __ __ 03 __ \n",
+      "01 __ __ __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 02 __ 03 \n",
+      "__ 01 __ __ __ \n",
+      "04 __ __ __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ __ __ 03 \n",
+      "__ 02 __ __ __ \n",
+      "04 __ 05 __ 01 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 01 __ 03 \n",
+      "__ __ __ 05 __ \n",
+      "__ __ 02 __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ __ __ 01 \n",
+      "__ __ __ 05 __ \n",
+      "04 __ 02 __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ 04 __ 01 \n",
+      "__ __ __ 05 __ \n",
+      "__ __ __ __ 02 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ __ __ 01 \n",
+      "__ 03 __ __ __ \n",
+      "__ __ 04 __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 03 __ 05 \n",
+      "__ 01 __ 04 __ \n",
+      "__ __ __ __ 02 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "04 __ 05 __ __ \n",
+      "__ 02 __ __ __ \n",
+      "__ __ 01 __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 02 __ __ \n",
+      "__ 03 __ 01 __ \n",
+      "__ __ 05 __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 02 __ __ \n",
+      "__ 01 __ 03 __ \n",
+      "05 __ __ __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ 03 __ 01 \n",
+      "__ 04 __ __ __ \n",
+      "__ __ 05 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ 04 __ 02 \n",
+      "__ __ __ __ __ \n",
+      "01 __ __ __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 04 __ 05 \n",
+      "__ __ __ 02 __ \n",
+      "01 __ __ __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "01 __ __ __ __ \n",
+      "__ 04 __ 02 __ \n",
+      "__ __ 05 __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "05 __ 02 __ __ \n",
+      "__ __ __ __ __ \n",
+      "04 __ 01 __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "04 __ __ __ __ \n",
+      "__ 02 __ __ __ \n",
+      "05 __ 01 __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ __ __ 01 \n",
+      "__ 05 __ 02 __ \n",
+      "03 __ 04 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ __ __ 01 \n",
+      "__ __ __ 04 __ \n",
+      "__ __ 02 __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ 01 __ __ \n",
+      "__ __ __ 05 __ \n",
+      "03 __ 04 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "01 __ __ __ 02 \n",
+      "__ __ __ __ __ \n",
+      "03 __ 05 __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ __ __ __ \n",
+      "__ 01 __ 05 __ \n",
+      "__ __ 04 __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ __ __ __ \n",
+      "__ 04 __ 05 __ \n",
+      "03 __ __ __ 01 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "05 __ __ __ 03 \n",
+      "__ 01 __ 02 __ \n",
+      "__ __ __ __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ __ __ 05 \n",
+      "__ 04 __ 01 __ \n",
+      "__ __ __ __ 02 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "01 __ 03 __ __ \n",
+      "__ 02 __ 05 __ \n",
+      "__ __ __ __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 04 __ 02 \n",
+      "__ 03 __ __ __ \n",
+      "01 __ __ __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "05 __ 03 __ __ \n",
+      "__ 01 __ __ __ \n",
+      "__ __ 04 __ 02 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ __ __ __ \n",
+      "__ 04 __ 01 __ \n",
+      "03 __ 05 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ 01 __ __ \n",
+      "__ __ __ 04 __ \n",
+      "05 __ 03 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 02 __ __ \n",
+      "__ 01 __ __ __ \n",
+      "03 __ 05 __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "05 __ 01 __ __ \n",
+      "__ 03 __ __ __ \n",
+      "__ __ 02 __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ 05 __ 04 \n",
+      "__ 02 __ 01 __ \n",
+      "__ __ __ __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "04 __ 03 __ __ \n",
+      "__ 02 __ 01 __ \n",
+      "__ __ __ __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 03 __ 02 \n",
+      "__ 04 __ 01 __ \n",
+      "__ __ __ __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "01 __ 02 __ 05 \n",
+      "__ 03 __ __ __ \n",
+      "__ __ __ __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 03 __ 02 \n",
+      "__ __ __ __ __ \n",
+      "01 __ 05 __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "05 __ 04 __ 01 \n",
+      "__ 03 __ __ __ \n",
+      "__ __ 02 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 01 __ __ \n",
+      "__ 04 __ 03 __ \n",
+      "02 __ __ __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "05 __ 03 __ __ \n",
+      "__ 01 __ 02 __ \n",
+      "04 __ __ __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 05 __ __ \n",
+      "__ 04 __ __ __ \n",
+      "01 __ 02 __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 01 __ __ \n",
+      "__ 02 __ 05 __ \n",
+      "04 __ __ __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 01 __ 05 \n",
+      "__ __ __ 04 __ \n",
+      "02 __ __ __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "04 __ 01 __ __ \n",
+      "__ 03 __ 02 __ \n",
+      "__ __ 05 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 01 __ 03 \n",
+      "__ 04 __ __ __ \n",
+      "05 __ 02 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ __ __ 03 \n",
+      "__ __ __ __ __ \n",
+      "05 __ 04 __ 01 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 01 __ __ \n",
+      "__ 05 __ 04 __ \n",
+      "__ __ 02 __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 04 __ 05 \n",
+      "__ 03 __ 01 __ \n",
+      "02 __ __ __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "04 __ __ __ __ \n",
+      "__ 01 __ __ __ \n",
+      "02 __ 05 __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ __ __ 01 \n",
+      "__ 03 __ 05 __ \n",
+      "__ __ __ __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ 05 __ __ \n",
+      "__ 04 __ 01 __ \n",
+      "02 __ __ __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 01 __ 03 \n",
+      "__ 05 __ 04 __ \n",
+      "__ __ 02 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ __ __ __ \n",
+      "__ 04 __ __ __ \n",
+      "02 __ 05 __ 01 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ __ __ __ \n",
+      "__ 04 __ 03 __ \n",
+      "01 __ __ __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 01 __ 02 \n",
+      "__ __ __ 03 __ \n",
+      "05 __ __ __ 04 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 05 __ 02 \n",
+      "__ 03 __ __ __ \n",
+      "04 __ __ __ 01 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 02 __ 05 \n",
+      "__ __ __ 04 __ \n",
+      "01 __ __ __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ __ __ 02 \n",
+      "__ __ __ 01 __ \n",
+      "04 __ 03 __ 05 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ 04 __ 02 \n",
+      "__ __ __ __ __ \n",
+      "01 __ 05 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "05 __ __ __ 03 \n",
+      "__ 04 __ 01 __ \n",
+      "__ __ 02 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 01 __ __ \n",
+      "__ 05 __ 04 __ \n",
+      "03 __ 02 __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 04 __ 03 \n",
+      "__ __ __ 02 __ \n",
+      "05 __ __ __ 01 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "04 __ 02 __ __ \n",
+      "__ __ __ 05 __ \n",
+      "__ __ 01 __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "02 __ __ __ __ \n",
+      "__ __ __ 01 __ \n",
+      "04 __ 05 __ 03 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "__ __ 03 __ 01 \n",
+      "__ __ __ __ __ \n",
+      "05 __ 04 __ 02 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "01 __ 03 __ __ \n",
+      "__ 05 __ 04 __ \n",
+      "02 __ __ __ __ \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "03 __ 05 __ __ \n",
+      "__ __ __ 04 __ \n",
+      "02 __ __ __ 01 \n",
+      "\n",
+      "\n",
       "\n",
       "\n"
      ]
@@ -68,7 +718,7 @@
     "def position():\n",
     "    x1=5\n",
     "    y1=3\n",
-    "    c1=[1,2,3,4,5,6,7,8]\n",
+    "    c1=[int(a) for a in range(1, 9)]\n",
     "    for i in range(y1):\n",
     "        for j in range(x1):\n",
     "            if (i%2==0 and j%2==1) or (i%2==1 and j%2==0):\n",
@@ -81,11 +731,9 @@
     "                    print(\"0\"+str(d1), end=\" \")\n",
     "                c1.remove(d1)\n",
     "        print(\"\")\n",
-    "    print(\"\")\n",
-    "    print(\"\")\n",
-    "\n",
+    "    print(\"\\n\\n\\n\")\n",
     "i=0\n",
-    "while i < 10:\n",
+    "while i < 100:\n",
     "    position()\n",
     "    i += 1"
    ]
