--- a/random sample.ipynb
+++ b/random sample.ipynb
@@ -28,6 +28,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "9b2a2f6f-5741-4f84-8d4b-221856f07f63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [1, 2, 4], [1, 2, 5], [1, 2, 6], [1, 2, 7], [1, 2, 8], [1, 3, 4], [1, 3, 5], [1, 3, 6], [1, 3, 7], [1, 3, 8], [1, 4, 5], [1, 4, 6], [1, 4, 7], [1, 4, 8], [1, 5, 6], [1, 5, 7], [1, 5, 8], [1, 6, 7], [1, 6, 8], [1, 7, 8], [2, 3, 4], [2, 3, 5], [2, 3, 6], [2, 3, 7], [2, 3, 8], [2, 4, 5], [2, 4, 6], [2, 4, 7], [2, 4, 8], [2, 5, 6], [2, 5, 7], [2, 5, 8], [2, 6, 7], [2, 6, 8], [2, 7, 8], [3, 4, 5], [3, 4, 6], [3, 4, 7], [3, 4, 8], [3, 5, 6], [3, 5, 7], [3, 5, 8], [3, 6, 7], [3, 6, 8], [3, 7, 8], [4, 5, 6], [4, 5, 7], [4, 5, 8], [4, 6, 7], [4, 6, 8], [4, 7, 8], [5, 6, 7], [5, 6, 8], [5, 7, 8], [6, 7, 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "n = len(l)\n",
+    "r = 3\n",
+    "answer = []\n",
+    "def dfs(idx, list):\n",
+    "    if len(list) == r:\n",
+    "        answer.append(list[:])\n",
+    "        return\n",
+    "    \n",
+    "    for i in range(idx, n):\n",
+    "        dfs(i+1, list+[l[i]])\n",
+    "\n",
+    "dfs(0, [])\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "e0540a15-38c4-4a11-a73e-c8b1062c9ebe",
    "metadata": {},
