--- a/placement.ipynb
+++ b/placement.ipynb
@@ -2,58 +2,292 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "711d672d-71d0-46d6-9be9-237ab9a3c85f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=[[0]*i for i in [3,2,1,3,5]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "d8cae002-1ec5-401b-bc35-28c1e85a39b2",
+   "execution_count": 2,
+   "id": "3f159ea6-e088-4540-bfd9-a97b9f217e00",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 2, 3], [1, 2, 4], [1, 2, 5], [1, 2, 6], [1, 2, 7], [1, 2, 8], [1, 3, 4], [1, 3, 5], [1, 3, 6], [1, 3, 7], [1, 3, 8], [1, 4, 5], [1, 4, 6], [1, 4, 7], [1, 4, 8], [1, 5, 6], [1, 5, 7], [1, 5, 8], [1, 6, 7], [1, 6, 8], [1, 7, 8], [2, 3, 4], [2, 3, 5], [2, 3, 6], [2, 3, 7], [2, 3, 8], [2, 4, 5], [2, 4, 6], [2, 4, 7], [2, 4, 8], [2, 5, 6], [2, 5, 7], [2, 5, 8], [2, 6, 7], [2, 6, 8], [2, 7, 8], [3, 4, 5], [3, 4, 6], [3, 4, 7], [3, 4, 8], [3, 5, 6], [3, 5, 7], [3, 5, 8], [3, 6, 7], [3, 6, 8], [3, 7, 8], [4, 5, 6], [4, 5, 7], [4, 5, 8], [4, 6, 7], [4, 6, 8], [4, 7, 8], [5, 6, 7], [5, 6, 8], [5, 7, 8], [6, 7, 8]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "l = [1, 2, 3, 4, 5, 6, 7, 8]\n",
-    "n = len(l)\n",
-    "r = 3\n",
-    "answer = []\n",
-    "def dfs(idx, list):\n",
-    "    if len(list) == r:\n",
-    "        answer.append(list[:])\n",
-    "        return\n",
-    "    \n",
-    "    for i in range(idx, n):\n",
-    "        dfs(i+1, list+[l[i]])\n",
-    "\n",
-    "dfs(0, [])\n",
-    "print(answer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "id": "fcfd1a63-b6ff-4c66-8a0d-2752e4c20a70",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "00  __  00  __  00  \n",
+      "__  00  __  00  __  \n",
       "__  __  __  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  00  \n",
+      "__  00  __  __  __  \n",
+      "00  __  __  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  00  \n",
+      "__  00  __  __  __  \n",
+      "__  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  00  \n",
+      "__  00  __  __  __  \n",
+      "__  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  00  \n",
+      "__  __  __  00  __  \n",
+      "00  __  __  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  00  \n",
+      "__  __  __  00  __  \n",
+      "__  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  00  \n",
+      "__  __  __  00  __  \n",
+      "__  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  00  \n",
       "__  __  __  __  __  \n",
+      "00  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  00  \n",
       "__  __  __  __  __  \n",
+      "00  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  00  \n",
+      "__  __  __  __  __  \n",
+      "__  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  __  \n",
+      "__  00  __  00  __  \n",
+      "00  __  __  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  __  \n",
+      "__  00  __  00  __  \n",
+      "__  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  __  \n",
+      "__  00  __  00  __  \n",
+      "__  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  __  \n",
+      "__  00  __  __  __  \n",
+      "00  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  __  \n",
+      "__  00  __  __  __  \n",
+      "00  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  __  \n",
+      "__  00  __  __  __  \n",
+      "__  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  __  \n",
+      "__  __  __  00  __  \n",
+      "00  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  __  \n",
+      "__  __  __  00  __  \n",
+      "00  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  __  \n",
+      "__  __  __  00  __  \n",
+      "__  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  00  __  __  \n",
+      "__  __  __  __  __  \n",
+      "00  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  00  __  00  __  \n",
+      "00  __  __  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  00  __  00  __  \n",
+      "__  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  00  __  00  __  \n",
+      "__  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  00  __  __  __  \n",
+      "00  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  00  __  __  __  \n",
+      "00  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  00  __  __  __  \n",
+      "__  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  __  __  00  __  \n",
+      "00  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  __  __  00  __  \n",
+      "00  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  __  __  00  __  \n",
+      "__  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  __  __  __  __  \n",
+      "00  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  __  \n",
+      "__  00  __  00  __  \n",
+      "00  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  __  \n",
+      "__  00  __  00  __  \n",
+      "00  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  __  \n",
+      "__  00  __  00  __  \n",
+      "__  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  __  \n",
+      "__  00  __  __  __  \n",
+      "00  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "00  __  __  __  __  \n",
+      "__  __  __  00  __  \n",
+      "00  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  00  \n",
+      "__  00  __  00  __  \n",
+      "00  __  __  __  __  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  00  \n",
+      "__  00  __  00  __  \n",
+      "__  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  00  \n",
+      "__  00  __  00  __  \n",
+      "__  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  00  \n",
+      "__  00  __  __  __  \n",
+      "00  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  00  \n",
+      "__  00  __  __  __  \n",
+      "00  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  00  \n",
+      "__  00  __  __  __  \n",
+      "__  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  00  \n",
+      "__  __  __  00  __  \n",
+      "00  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  00  \n",
+      "__  __  __  00  __  \n",
+      "00  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  00  \n",
+      "__  __  __  00  __  \n",
+      "__  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  00  \n",
+      "__  __  __  __  __  \n",
+      "00  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  __  \n",
+      "__  00  __  00  __  \n",
+      "00  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  __  \n",
+      "__  00  __  00  __  \n",
+      "00  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  __  \n",
+      "__  00  __  00  __  \n",
+      "__  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  __  \n",
+      "__  00  __  __  __  \n",
+      "00  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  00  __  __  \n",
+      "__  __  __  00  __  \n",
+      "00  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  __  __  00  \n",
+      "__  00  __  00  __  \n",
+      "00  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "__  __  __  __  00  \n",
+      "__  00  __  00  __  \n",
+      "00  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  __  __  00  \n",
+      "__  00  __  00  __  \n",
+      "__  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  __  __  00  \n",
+      "__  00  __  __  __  \n",
+      "00  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  __  __  00  \n",
+      "__  __  __  00  __  \n",
+      "00  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "__  __  __  __  __  \n",
+      "__  00  __  00  __  \n",
+      "00  __  00  __  00  \n",
       "\n",
       "\n"
      ]
@@ -71,27 +305,8 @@
     "    print(\"\")\n",
     "    print(\"\")\n",
     "\n",
-    "printlist(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "6e7c69d5-d858-4edd-9e0d-1a14843d6596",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 2, 3, 4, 5], [1, 2, 3, 4, 6], [1, 2, 3, 4, 7], [1, 2, 3, 4, 8], [1, 2, 3, 5, 6], [1, 2, 3, 5, 7], [1, 2, 3, 5, 8], [1, 2, 3, 6, 7], [1, 2, 3, 6, 8], [1, 2, 3, 7, 8], [1, 2, 4, 5, 6], [1, 2, 4, 5, 7], [1, 2, 4, 5, 8], [1, 2, 4, 6, 7], [1, 2, 4, 6, 8], [1, 2, 4, 7, 8], [1, 2, 5, 6, 7], [1, 2, 5, 6, 8], [1, 2, 5, 7, 8], [1, 2, 6, 7, 8], [1, 3, 4, 5, 6], [1, 3, 4, 5, 7], [1, 3, 4, 5, 8], [1, 3, 4, 6, 7], [1, 3, 4, 6, 8], [1, 3, 4, 7, 8], [1, 3, 5, 6, 7], [1, 3, 5, 6, 8], [1, 3, 5, 7, 8], [1, 3, 6, 7, 8], [1, 4, 5, 6, 7], [1, 4, 5, 6, 8], [1, 4, 5, 7, 8], [1, 4, 6, 7, 8], [1, 5, 6, 7, 8], [2, 3, 4, 5, 6], [2, 3, 4, 5, 7], [2, 3, 4, 5, 8], [2, 3, 4, 6, 7], [2, 3, 4, 6, 8], [2, 3, 4, 7, 8], [2, 3, 5, 6, 7], [2, 3, 5, 6, 8], [2, 3, 5, 7, 8], [2, 3, 6, 7, 8], [2, 4, 5, 6, 7], [2, 4, 5, 6, 8], [2, 4, 5, 7, 8], [2, 4, 6, 7, 8], [2, 5, 6, 7, 8], [3, 4, 5, 6, 7], [3, 4, 5, 6, 8], [3, 4, 5, 7, 8], [3, 4, 6, 7, 8], [3, 5, 6, 7, 8], [4, 5, 6, 7, 8]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "l1 = []\n",
-    "l = [1, 2, 3, 4, 5, 6, 7, 8]\n",
-    "n = len(l)\n",
+    "l1 = [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "n = len(l1)\n",
     "r = 5\n",
     "answer = []\n",
     "\n",
@@ -101,349 +316,10 @@
     "        return\n",
     "    \n",
     "    for i in range(idx, n):\n",
-    "        dfs(i+1, list+[l[i]])\n",
+    "        dfs(i+1, list+[l1[i]])\n",
     "\n",
     "dfs(0, [])\n",
-    "print(answer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "36bee4d7-2bed-4c96-9161-bb60f5cf679c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 2, 3, 4, 5], [1, 2, 3, 4, 6], [1, 2, 3, 4, 7], [1, 2, 3, 4, 8], [1, 2, 3, 5, 6], [1, 2, 3, 5, 7], [1, 2, 3, 5, 8], [1, 2, 3, 6, 7], [1, 2, 3, 6, 8], [1, 2, 3, 7, 8], [1, 2, 4, 5, 6], [1, 2, 4, 5, 7], [1, 2, 4, 5, 8], [1, 2, 4, 6, 7], [1, 2, 4, 6, 8], [1, 2, 4, 7, 8], [1, 2, 5, 6, 7], [1, 2, 5, 6, 8], [1, 2, 5, 7, 8], [1, 2, 6, 7, 8], [1, 3, 4, 5, 6], [1, 3, 4, 5, 7], [1, 3, 4, 5, 8], [1, 3, 4, 6, 7], [1, 3, 4, 6, 8], [1, 3, 4, 7, 8], [1, 3, 5, 6, 7], [1, 3, 5, 6, 8], [1, 3, 5, 7, 8], [1, 3, 6, 7, 8], [1, 4, 5, 6, 7], [1, 4, 5, 6, 8], [1, 4, 5, 7, 8], [1, 4, 6, 7, 8], [1, 5, 6, 7, 8], [2, 3, 4, 5, 6], [2, 3, 4, 5, 7], [2, 3, 4, 5, 8], [2, 3, 4, 6, 7], [2, 3, 4, 6, 8], [2, 3, 4, 7, 8], [2, 3, 5, 6, 7], [2, 3, 5, 6, 8], [2, 3, 5, 7, 8], [2, 3, 6, 7, 8], [2, 4, 5, 6, 7], [2, 4, 5, 6, 8], [2, 4, 5, 7, 8], [2, 4, 6, 7, 8], [2, 5, 6, 7, 8], [3, 4, 5, 6, 7], [3, 4, 5, 6, 8], [3, 4, 5, 7, 8], [3, 4, 6, 7, 8], [3, 5, 6, 7, 8], [4, 5, 6, 7, 8]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "l2 = []\n",
-    "for i in range(28):\n",
-    "    for j in range(r):\n",
-    "        l2.append(answer[i][j])\n",
-    "print(answer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "f2bc0907-9fbc-400c-878a-4b5bb6b22837",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "56"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(answer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "a5336997-08df-4293-ba6d-2653c3ae5400",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "00  __  00  __  00  \n",
-      "__  00  __  00  __  \n",
-      "__  __  __  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  00  \n",
-      "__  00  __  __  __  \n",
-      "00  __  __  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  00  \n",
-      "__  00  __  __  __  \n",
-      "__  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  00  \n",
-      "__  00  __  __  __  \n",
-      "__  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  00  \n",
-      "__  __  __  00  __  \n",
-      "00  __  __  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  00  \n",
-      "__  __  __  00  __  \n",
-      "__  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  00  \n",
-      "__  __  __  00  __  \n",
-      "__  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  00  \n",
-      "__  __  __  __  __  \n",
-      "00  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  00  \n",
-      "__  __  __  __  __  \n",
-      "00  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  00  \n",
-      "__  __  __  __  __  \n",
-      "__  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  00  __  00  __  \n",
-      "00  __  __  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  00  __  00  __  \n",
-      "__  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  00  __  00  __  \n",
-      "__  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  00  __  __  __  \n",
-      "00  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  00  __  __  __  \n",
-      "00  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  00  __  __  __  \n",
-      "__  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  __  __  00  __  \n",
-      "00  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  __  __  00  __  \n",
-      "00  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  __  __  00  __  \n",
-      "__  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  __  __  __  __  \n",
-      "00  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  00  __  00  __  \n",
-      "00  __  __  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  00  __  00  __  \n",
-      "__  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  00  __  00  __  \n",
-      "__  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  00  __  __  __  \n",
-      "00  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  00  __  __  __  \n",
-      "00  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  00  __  __  __  \n",
-      "__  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  __  __  00  __  \n",
-      "00  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  __  __  00  __  \n",
-      "00  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  __  __  00  __  \n",
-      "__  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  __  __  __  __  \n",
-      "00  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  __  \n",
-      "__  00  __  00  __  \n",
-      "00  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  __  \n",
-      "__  00  __  00  __  \n",
-      "00  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  __  \n",
-      "__  00  __  00  __  \n",
-      "__  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  __  \n",
-      "__  00  __  __  __  \n",
-      "00  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  __  \n",
-      "__  __  __  00  __  \n",
-      "00  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  00  \n",
-      "__  00  __  00  __  \n",
-      "00  __  __  __  __  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  00  \n",
-      "__  00  __  00  __  \n",
-      "__  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  00  \n",
-      "__  00  __  00  __  \n",
-      "__  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  00  \n",
-      "__  00  __  __  __  \n",
-      "00  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  00  \n",
-      "__  00  __  __  __  \n",
-      "00  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  00  \n",
-      "__  00  __  __  __  \n",
-      "__  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  00  \n",
-      "__  __  __  00  __  \n",
-      "00  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  00  \n",
-      "__  __  __  00  __  \n",
-      "00  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  00  \n",
-      "__  __  __  00  __  \n",
-      "__  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  00  \n",
-      "__  __  __  __  __  \n",
-      "00  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  __  \n",
-      "__  00  __  00  __  \n",
-      "00  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  __  \n",
-      "__  00  __  00  __  \n",
-      "00  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  __  \n",
-      "__  00  __  00  __  \n",
-      "__  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  __  \n",
-      "__  00  __  __  __  \n",
-      "00  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  00  __  __  \n",
-      "__  __  __  00  __  \n",
-      "00  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  __  __  00  \n",
-      "__  00  __  00  __  \n",
-      "00  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "__  __  __  __  00  \n",
-      "__  00  __  00  __  \n",
-      "00  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  __  __  00  \n",
-      "__  00  __  00  __  \n",
-      "__  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  __  __  00  \n",
-      "__  00  __  __  __  \n",
-      "00  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  __  __  00  \n",
-      "__  __  __  00  __  \n",
-      "00  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "__  __  __  __  __  \n",
-      "__  00  __  00  __  \n",
-      "00  __  00  __  00  \n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
     "for i in answer:\n",
     "    l = []\n",
     "    for j in range(15):\n",
@@ -458,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25fbc5b3-9f16-4d1a-ad4c-594015c85daa",
+   "id": "36eb12fb-dc64-4c8b-a934-30198675a984",
    "metadata": {},
    "outputs": [],
    "source": []
