--- a/placement.ipynb
+++ b/placement.ipynb
@@ -15,9 +15,11 @@
       "__  __  __  __  __  \n",
       "\n",
       "\n",
+      "\n",
       "00  __  00  __  00  \n",
       "__  00  __  __  __  \n",
       "00  __  __  __  __  \n",
+      "\n",
       "\n",
       "\n",
       "00  __  00  __  00  \n",
@@ -25,9 +27,11 @@
       "__  __  00  __  __  \n",
       "\n",
       "\n",
+      "\n",
       "00  __  00  __  00  \n",
       "__  00  __  __  __  \n",
       "__  __  __  __  00  \n",
+      "\n",
       "\n",
       "\n",
       "00  __  00  __  00  \n",
@@ -35,14 +39,17 @@
       "00  __  __  __  __  \n",
       "\n",
       "\n",
+      "\n",
       "00  __  00  __  00  \n",
       "__  __  __  00  __  \n",
       "__  __  00  __  __  \n",
       "\n",
       "\n",
+      "\n",
       "00  __  00  __  00  \n",
       "__  __  __  00  __  \n",
       "__  __  __  __  00  \n",
+      "\n",
       "\n",
       "\n",
       "00  __  00  __  00  \n",
@@ -50,14 +57,17 @@
       "00  __  00  __  __  \n",
       "\n",
       "\n",
+      "\n",
       "00  __  00  __  00  \n",
       "__  __  __  __  __  \n",
       "00  __  __  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "00  __  00  __  00  \n",
       "__  __  __  __  __  \n",
       "__  __  00  __  00  \n",
+      "\n",
       "\n",
       "\n",
       "00  __  00  __  __  \n",
@@ -65,9 +75,11 @@
       "00  __  __  __  __  \n",
       "\n",
       "\n",
+      "\n",
       "00  __  00  __  __  \n",
       "__  00  __  00  __  \n",
       "__  __  00  __  __  \n",
+      "\n",
       "\n",
       "\n",
       "00  __  00  __  __  \n",
@@ -75,94 +87,113 @@
       "__  __  __  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "00  __  00  __  __  \n",
       "__  00  __  __  __  \n",
       "00  __  00  __  __  \n",
       "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  00  __  __  __  \n",
-      "00  __  __  __  00  \n",
       "\n",
       "\n",
       "00  __  00  __  __  \n",
       "__  00  __  __  __  \n",
-      "__  __  00  __  00  \n",
+      "00  __  __  __  00  \n",
+      "\n",
       "\n",
       "\n",
       "00  __  00  __  __  \n",
-      "__  __  __  00  __  \n",
-      "00  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  __  __  00  __  \n",
-      "00  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  __  __  00  __  \n",
-      "__  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  00  __  __  \n",
-      "__  __  __  __  __  \n",
-      "00  __  00  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  00  __  00  __  \n",
-      "00  __  __  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  00  __  00  __  \n",
-      "__  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  00  __  00  __  \n",
-      "__  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  00  __  __  __  \n",
-      "00  __  00  __  __  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
-      "__  00  __  __  __  \n",
-      "00  __  __  __  00  \n",
-      "\n",
-      "\n",
-      "00  __  __  __  00  \n",
       "__  00  __  __  __  \n",
       "__  __  00  __  00  \n",
       "\n",
       "\n",
-      "00  __  __  __  00  \n",
+      "\n",
+      "00  __  00  __  __  \n",
       "__  __  __  00  __  \n",
       "00  __  00  __  __  \n",
       "\n",
       "\n",
-      "00  __  __  __  00  \n",
+      "\n",
+      "00  __  00  __  __  \n",
       "__  __  __  00  __  \n",
       "00  __  __  __  00  \n",
       "\n",
       "\n",
-      "00  __  __  __  00  \n",
+      "\n",
+      "00  __  00  __  __  \n",
       "__  __  __  00  __  \n",
       "__  __  00  __  00  \n",
       "\n",
       "\n",
-      "00  __  __  __  00  \n",
+      "\n",
+      "00  __  00  __  __  \n",
       "__  __  __  __  __  \n",
       "00  __  00  __  00  \n",
       "\n",
       "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  00  __  00  __  \n",
+      "00  __  __  __  __  \n",
+      "\n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  00  __  00  __  \n",
+      "__  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  00  __  00  __  \n",
+      "__  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  00  __  __  __  \n",
+      "00  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  00  __  __  __  \n",
+      "00  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  00  __  __  __  \n",
+      "__  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  __  __  00  __  \n",
+      "00  __  00  __  __  \n",
+      "\n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  __  __  00  __  \n",
+      "00  __  __  __  00  \n",
+      "\n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  __  __  00  __  \n",
+      "__  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "\n",
+      "00  __  __  __  00  \n",
+      "__  __  __  __  __  \n",
+      "00  __  00  __  00  \n",
+      "\n",
+      "\n",
+      "\n",
       "00  __  __  __  __  \n",
       "__  00  __  00  __  \n",
       "00  __  00  __  __  \n",
+      "\n",
       "\n",
       "\n",
       "00  __  __  __  __  \n",
@@ -170,9 +201,11 @@
       "00  __  __  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "00  __  __  __  __  \n",
       "__  00  __  00  __  \n",
       "__  __  00  __  00  \n",
+      "\n",
       "\n",
       "\n",
       "00  __  __  __  __  \n",
@@ -180,14 +213,17 @@
       "00  __  00  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "00  __  __  __  __  \n",
       "__  __  __  00  __  \n",
       "00  __  00  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "__  __  00  __  00  \n",
       "__  00  __  00  __  \n",
       "00  __  __  __  __  \n",
+      "\n",
       "\n",
       "\n",
       "__  __  00  __  00  \n",
@@ -195,14 +231,17 @@
       "__  __  00  __  __  \n",
       "\n",
       "\n",
+      "\n",
       "__  __  00  __  00  \n",
       "__  00  __  00  __  \n",
       "__  __  __  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "__  __  00  __  00  \n",
       "__  00  __  __  __  \n",
       "00  __  00  __  __  \n",
+      "\n",
       "\n",
       "\n",
       "__  __  00  __  00  \n",
@@ -210,9 +249,11 @@
       "00  __  __  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "__  __  00  __  00  \n",
       "__  00  __  __  __  \n",
       "__  __  00  __  00  \n",
+      "\n",
       "\n",
       "\n",
       "__  __  00  __  00  \n",
@@ -220,14 +261,17 @@
       "00  __  00  __  __  \n",
       "\n",
       "\n",
+      "\n",
       "__  __  00  __  00  \n",
       "__  __  __  00  __  \n",
       "00  __  __  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "__  __  00  __  00  \n",
       "__  __  __  00  __  \n",
       "__  __  00  __  00  \n",
+      "\n",
       "\n",
       "\n",
       "__  __  00  __  00  \n",
@@ -235,9 +279,11 @@
       "00  __  00  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "__  __  00  __  __  \n",
       "__  00  __  00  __  \n",
       "00  __  00  __  __  \n",
+      "\n",
       "\n",
       "\n",
       "__  __  00  __  __  \n",
@@ -245,9 +291,11 @@
       "00  __  __  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "__  __  00  __  __  \n",
       "__  00  __  00  __  \n",
       "__  __  00  __  00  \n",
+      "\n",
       "\n",
       "\n",
       "__  __  00  __  __  \n",
@@ -255,9 +303,11 @@
       "00  __  00  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "__  __  00  __  __  \n",
       "__  __  __  00  __  \n",
       "00  __  00  __  00  \n",
+      "\n",
       "\n",
       "\n",
       "__  __  __  __  00  \n",
@@ -265,9 +315,11 @@
       "00  __  00  __  __  \n",
       "\n",
       "\n",
+      "\n",
       "__  __  __  __  00  \n",
       "__  00  __  00  __  \n",
       "00  __  __  __  00  \n",
+      "\n",
       "\n",
       "\n",
       "__  __  __  __  00  \n",
@@ -275,37 +327,37 @@
       "__  __  00  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "__  __  __  __  00  \n",
       "__  00  __  __  __  \n",
       "00  __  00  __  00  \n",
       "\n",
       "\n",
+      "\n",
       "__  __  __  __  00  \n",
       "__  __  __  00  __  \n",
       "00  __  00  __  00  \n",
+      "\n",
       "\n",
       "\n",
       "__  __  __  __  __  \n",
       "__  00  __  00  __  \n",
       "00  __  00  __  00  \n",
+      "\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "l = []\n",
-    "for i in range(15):\n",
-    "    l.append('__')\n",
     "def printlist(list):\n",
     "    for index, value in enumerate(l, start = 1):\n",
     "        print(value, end = ('  '))\n",
     "        if index %5 == 0:\n",
     "            print(\"\")\n",
-    "    print(\"\")\n",
-    "    print(\"\")\n",
+    "    print(\"\\n\\n\")\n",
     "\n",
-    "l1 = [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "l1 = list(range(1,9))\n",
     "n = len(l1)\n",
     "r = 5\n",
     "answer = []\n",
