--- a/simul.ipynb
+++ b/simul.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 2,
    "id": "a790b299-f5ca-4240-8458-b8bdcde1bdca",
    "metadata": {},
    "outputs": [
@@ -10,33 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "전투력 차이 : 100.00\n",
-      "보정치 1.95배\n",
-      "164476.6\n",
-      "158953.2\n",
-      "153429.8\n",
-      "147906.5\n",
-      "142383.1\n",
-      "136859.7\n",
-      "131336.3\n",
-      "125812.9\n",
-      "109242.8\n",
-      "103719.4\n",
-      "98196.0\n",
-      "92672.6\n",
-      "87149.2\n",
-      "81625.9\n",
-      "76102.5\n",
-      "70579.1\n",
-      "65055.7\n",
-      "59532.3\n",
-      "54008.9\n",
-      "48485.5\n",
-      "42962.2\n",
-      "37438.8\n",
-      "31915.4\n",
-      "15345.2\n",
-      "25대 맞고 죽음\n"
+      "전투력 차이 : 170090.00\n",
+      "보정치 2.10배\n",
+      "1대 맞고 죽음\n"
      ]
     }
    ],
@@ -47,7 +23,7 @@
     "at = 2835\n",
     "ch = 100\n",
     "cd = 300\n",
-    "hp = 170000\n",
+    "hp = 10\n",
     "\n",
     "c = at*((1000-ch)/1000 + ch/1000*cd/100)*50 - hp\n",
     "print(f'전투력 차이 : {c:.2f}')\n",
@@ -74,8 +50,455 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "9e7605fa-63ed-4235-a44e-9ed414d5684f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20001\n",
+      "60001\n",
+      "10001\n",
+      "30001\n",
+      "110002\n",
+      "60002\n",
+      "10002\n",
+      "50002\n",
+      "20003\n",
+      "40003\n",
+      "100003\n",
+      "70003\n",
+      "20004\n",
+      "30004\n",
+      "90004\n",
+      "60004\n",
+      "50005\n",
+      "60005\n",
+      "40005\n",
+      "90005\n",
+      "30006\n",
+      "50006\n",
+      "80006\n",
+      "40006\n",
+      "110007\n",
+      "60007\n",
+      "30007\n",
+      "20007\n",
+      "20008\n",
+      "10008\n",
+      "110008\n",
+      "30008\n",
+      "60009\n",
+      "90009\n",
+      "80009\n",
+      "30009\n",
+      "40010\n",
+      "70010\n",
+      "30010\n",
+      "100010\n",
+      "60011\n",
+      "10011\n",
+      "90011\n",
+      "100011\n",
+      "100012\n",
+      "30012\n",
+      "70012\n",
+      "110012\n",
+      "100013\n",
+      "40013\n",
+      "70013\n",
+      "90013\n",
+      "80014\n",
+      "110014\n",
+      "30014\n",
+      "100014\n",
+      "110015\n",
+      "20015\n",
+      "50015\n",
+      "10015\n",
+      "70016\n",
+      "110016\n",
+      "90016\n",
+      "30016\n",
+      "10017\n",
+      "30017\n",
+      "80017\n",
+      "110017\n",
+      "100018\n",
+      "20018\n",
+      "80018\n",
+      "110018\n",
+      "10019\n",
+      "80019\n",
+      "110019\n",
+      "40019\n",
+      "110020\n",
+      "20020\n",
+      "10020\n",
+      "80020\n",
+      "100021\n",
+      "20021\n",
+      "10021\n",
+      "50021\n",
+      "10022\n",
+      "110022\n",
+      "90022\n",
+      "20022\n",
+      "60023\n",
+      "90023\n",
+      "50023\n",
+      "100023\n",
+      "60024\n",
+      "20024\n",
+      "40024\n",
+      "100024\n",
+      "20025\n",
+      "60025\n",
+      "40025\n",
+      "100025\n",
+      "80026\n",
+      "20026\n",
+      "40026\n",
+      "70026\n",
+      "100027\n",
+      "60027\n",
+      "110027\n",
+      "20027\n",
+      "30028\n",
+      "70028\n",
+      "90028\n",
+      "110028\n",
+      "90029\n",
+      "50029\n",
+      "110029\n",
+      "40029\n",
+      "30030\n",
+      "20030\n",
+      "100030\n",
+      "10030\n",
+      "80031\n",
+      "110031\n",
+      "100031\n",
+      "60031\n",
+      "20032\n",
+      "40032\n",
+      "70032\n",
+      "110032\n",
+      "40033\n",
+      "30033\n",
+      "50033\n",
+      "110033\n",
+      "100034\n",
+      "50034\n",
+      "90034\n",
+      "40034\n",
+      "100035\n",
+      "10035\n",
+      "30035\n",
+      "40035\n",
+      "90036\n",
+      "110036\n",
+      "10036\n",
+      "30036\n",
+      "10037\n",
+      "110037\n",
+      "60037\n",
+      "40037\n",
+      "80038\n",
+      "90038\n",
+      "70038\n",
+      "40038\n",
+      "40039\n",
+      "10039\n",
+      "20039\n",
+      "50039\n",
+      "50040\n",
+      "30040\n",
+      "90040\n",
+      "40040\n",
+      "80041\n",
+      "10041\n",
+      "50041\n",
+      "100041\n",
+      "90042\n",
+      "40042\n",
+      "110042\n",
+      "20042\n",
+      "80043\n",
+      "60043\n",
+      "50043\n",
+      "90043\n",
+      "50044\n",
+      "80044\n",
+      "60044\n",
+      "90044\n",
+      "100045\n",
+      "10045\n",
+      "80045\n",
+      "110045\n",
+      "10046\n",
+      "20046\n",
+      "90046\n",
+      "100046\n",
+      "100047\n",
+      "20047\n",
+      "50047\n",
+      "90047\n",
+      "50048\n",
+      "30048\n",
+      "70048\n",
+      "100048\n",
+      "50049\n",
+      "10049\n",
+      "90049\n",
+      "70049\n",
+      "110050\n",
+      "70050\n",
+      "100050\n",
+      "50050\n",
+      "110051\n",
+      "60051\n",
+      "30051\n",
+      "50051\n",
+      "100052\n",
+      "80052\n",
+      "50052\n",
+      "20052\n",
+      "50053\n",
+      "80053\n",
+      "30053\n",
+      "100053\n",
+      "90054\n",
+      "110054\n",
+      "10054\n",
+      "70054\n",
+      "10055\n",
+      "40055\n",
+      "70055\n",
+      "60055\n",
+      "50056\n",
+      "20056\n",
+      "60056\n",
+      "40056\n",
+      "100057\n",
+      "10057\n",
+      "40057\n",
+      "60057\n",
+      "70058\n",
+      "20058\n",
+      "100058\n",
+      "40058\n",
+      "90059\n",
+      "110059\n",
+      "10059\n",
+      "30059\n",
+      "80060\n",
+      "90060\n",
+      "100060\n",
+      "10060\n",
+      "30061\n",
+      "70061\n",
+      "40061\n",
+      "90061\n",
+      "50062\n",
+      "10062\n",
+      "30062\n",
+      "60062\n",
+      "60063\n",
+      "20063\n",
+      "40063\n",
+      "90063\n",
+      "10064\n",
+      "110064\n",
+      "20064\n",
+      "80064\n",
+      "110065\n",
+      "40065\n",
+      "10065\n",
+      "60065\n",
+      "30066\n",
+      "10066\n",
+      "50066\n",
+      "80066\n",
+      "60067\n",
+      "30067\n",
+      "20067\n",
+      "50067\n",
+      "50068\n",
+      "70068\n",
+      "80068\n",
+      "40068\n",
+      "90069\n",
+      "30069\n",
+      "10069\n",
+      "80069\n",
+      "70070\n",
+      "10070\n",
+      "30070\n",
+      "100070\n",
+      "10071\n",
+      "90071\n",
+      "30071\n",
+      "110071\n",
+      "60072\n",
+      "110072\n",
+      "40072\n",
+      "10072\n",
+      "70073\n",
+      "100073\n",
+      "10073\n",
+      "60073\n",
+      "60074\n",
+      "30074\n",
+      "10074\n",
+      "80074\n",
+      "110075\n",
+      "50075\n",
+      "80075\n",
+      "10075\n",
+      "90076\n",
+      "80076\n",
+      "100076\n",
+      "60076\n",
+      "110077\n",
+      "60077\n",
+      "40077\n",
+      "70077\n",
+      "100078\n",
+      "90078\n",
+      "10078\n",
+      "40078\n",
+      "100079\n",
+      "90079\n",
+      "110079\n",
+      "20079\n",
+      "30080\n",
+      "100080\n",
+      "90080\n",
+      "60080\n",
+      "10081\n",
+      "50081\n",
+      "100081\n",
+      "90081\n",
+      "110082\n",
+      "70082\n",
+      "40082\n",
+      "90082\n",
+      "50083\n",
+      "30083\n",
+      "60083\n",
+      "20083\n",
+      "50084\n",
+      "100084\n",
+      "80084\n",
+      "60084\n",
+      "60085\n",
+      "20085\n",
+      "70085\n",
+      "110085\n",
+      "30086\n",
+      "60086\n",
+      "40086\n",
+      "80086\n",
+      "30087\n",
+      "110087\n",
+      "100087\n",
+      "60087\n",
+      "10088\n",
+      "50088\n",
+      "90088\n",
+      "40088\n",
+      "60089\n",
+      "80089\n",
+      "90089\n",
+      "30089\n",
+      "100090\n",
+      "40090\n",
+      "10090\n",
+      "110090\n",
+      "10091\n",
+      "90091\n",
+      "100091\n",
+      "70091\n",
+      "110092\n",
+      "70092\n",
+      "80092\n",
+      "100092\n",
+      "60093\n",
+      "30093\n",
+      "20093\n",
+      "90093\n",
+      "60094\n",
+      "30094\n",
+      "70094\n",
+      "110094\n",
+      "20095\n",
+      "70095\n",
+      "30095\n",
+      "90095\n",
+      "40096\n",
+      "60096\n",
+      "30096\n",
+      "100096\n",
+      "10097\n",
+      "70097\n",
+      "60097\n",
+      "20097\n",
+      "20098\n",
+      "30098\n",
+      "70098\n",
+      "50098\n",
+      "50099\n",
+      "110099\n",
+      "80099\n",
+      "20099\n",
+      "30100\n",
+      "40100\n",
+      "50100\n",
+      "20100\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i <= 100:\n",
+    "    j = 0\n",
+    "    m = random.sample(range(1,12),4)\n",
+    "    while j < 4:\n",
+    "        pick = m[j]*10000+i\n",
+    "        print(pick)\n",
+    "        j += 1\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c0e32503-62c3-4a64-be19-f78c2374fb02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 2, 10, 1]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = random.sample(range(1,12),4)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84d928d9-d10c-4e48-ad5e-3e6cdad7ae26",
    "metadata": {},
    "outputs": [],
    "source": []
