--- a/PyAutoGui.ipynb
+++ b/PyAutoGui.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "8b800085-e6c9-4023-a2e4-783859ea7750",
    "metadata": {},
    "outputs": [],
@@ -67,31 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "cf09bf2c-2113-48b5-82de-baa1443bb1b6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting opencv-python\n",
-      "  Downloading opencv_python-4.7.0.72-cp37-abi3-macosx_10_16_x86_64.whl (53.9 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.9/53.9 MB\u001b[0m \u001b[31m10.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.17.3 in /Users/sonnoridev/anaconda3/lib/python3.10/site-packages (from opencv-python) (1.23.5)\n",
-      "Installing collected packages: opencv-python\n",
-      "Successfully installed opencv-python-4.7.0.72\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install opencv-python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "439b5c07-7abe-40be-a005-01f40d95e377",
    "metadata": {},
    "outputs": [],
@@ -99,16 +75,7 @@
     "def get_location(img_path):\n",
     "    location = pg.locateCenterOnScreen(img_path)\n",
     "    x, y = location\n",
-    "    return x/2, y/2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "e8e128e7-b5b1-4f2b-9064-bcc51c3492ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return x/2, y/2\n",
     "q = get_location('456.png')\n",
     "pg.click(q)"
    ]
@@ -116,10 +83,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2527d32c-a2c0-423b-9a8a-2f8f3d9fc5e7",
+   "id": "ad813f1e-9373-4297-9dd2-961d00da57e2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pyautogui as pg\n",
+    "import keyboard\n",
+    "import time\n",
+    "import pyperclip\n",
+    "\n",
+    "for i in range(20,36):\n",
+    "    pg.click(323, 262)\n",
+    "    time.sleep(0.5)\n",
+    "    pg.click(323, 262)\n",
+    "    time.sleep(0.5)\n",
+    "    pg.press('esc', interval = 0.5)\n",
+    "    pyperclip.copy(i)\n",
+    "    time.sleep(0.5)\n",
+    "    pg.hotkey('command','v')\n",
+    "    time.sleep(0.1)\n",
+    "    pg.press('enter', presses=5, interval = 0.1)\n",
+    "    time.sleep(0.3)\n",
+    "    \n",
+    "    pg.hotkey('command','a')\n",
+    "    time.sleep(0.5)\n",
+    "    pg.hotkey('command','c')\n",
+    "    time.sleep(0.5)\n",
+    "    \n",
+    "    pg.click(1881, 41)\n",
+    "    time.sleep(0.1)\n",
+    "    pg.click(912, 220)\n",
+    "    time.sleep(0.1)\n",
+    "    pg.hotkey('command', 'option', 'v')\n",
+    "    time.sleep(0.5)\n",
+    "    pg.click(x=958, y=333)\n",
+    "    time.sleep(0.5)\n",
+    "    pg.press('enter', interval= 0.2)\n",
+    "    pg.hotkey('command', 'down')\n",
+    "    time.sleep(0.3)\n",
+    "    pg.press('down', presses=6, interval = 0.1)\n",
+    "    time.sleep(1)"
+   ]
   }
  ],
  "metadata": {
